fix button alignment

--- a/static/main.css
+++ b/static/main.css
@@ -30,7 +30,7 @@ h1,h2,h3 { margin: 0 }
 
 .act-btns {
 	display: block;
-	margin: 0 16px 16px;
+	margin: 0 0 16px;
 	text-align: right;
 }
 
